# wallpaper-gen

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  REACT_MIGRATION_PLAN.md  README.md  SECURITY.md  SETUP.md  progress.md  pyproject.toml  requirements.txt  start.ps1
api/: main.py  schemas.py
api/routes/: config.py  gallery.py  generate.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Gallery.tsx  GalleryCard.tsx  GalleryFilters.tsx  ImageComparison.tsx  ImageViewer.tsx  Pagination.tsx  ProgressBar.tsx  PromptForm.tsx  ResultDisplay.tsx  Settings.tsx  Sidebar.tsx  Tooltip.tsx
frontend/src/hooks/: useGallery.ts  useGenerate.ts
frontend/src/types/: index.ts
src/: app.py
src/config/: __init__.py  presets.py  settings.py
src/generator/: __init__.py  model.py  orchestrator.py  pipeline.py  upscaler.py
src/utils/: __init__.py  file_utils.py  image_utils.py
